Changes towards version 0.4:
- Talking Pet .txt file corrected to match the .ogg files,
  and talkpet.ts corrections, from Nic
- Abstracted window-drawing code from confirm.c -Michael
- Fixed blue comms screen problem (bug #363), from Joel Holveck & Nic
- Automatically adding an icon for Darwin builds, from Nic
- Fixed Roster-F10-Quit bug (#591), - Michael
- Restructured starcon2.c, with better checks for argument parsing,
  and consistent error messages. - SvdB
- Restructuring of the unix build scripts.
  Also, interrupted dependency builds are now detected. - SvdB
- Unix build: Make it possible to use another directory than the current
  one for putting the build data in (such as build.vars, config.state,
  the obj/ dir, and the final binary). - SvdB
- Fixed various odd behaviors when loading from HyperSpace (bug #587), 
  from Nic and Michael
- Added new 'triscan' scaler; derived from scale2x[.sf.net] -Alex
- Space marines die in a self-destructing Scout (Bug #445), from Nic
- Added the -l option to produce logfiles (bug #560), from Nic
- Zoq-Fot-Pik speech properly vertically centered (bug #579), from Nic
- Input code refactoring, phase 2: All player input is brokered by 
  DoInput -Michael
- Updated .cvsignore commands, from Nic
- Fixed a keyrepeatbug from when the player cancels out of the
  Starmap in IP -Michael
- IP_taskfunc now uses PulsedInputState instead of handling its
  own debounce delays -Michael
- Input code refactoring, phase 1: Replaced messy structs with an
  array indexed by an enum. -Michael
- Thread code refactoring: only the main thread will actually spawn 
  threads, and thread IDs are properly recycled with SDL_WaitThead () 
  once they're done.  (With luck, this will fix bug #561) -Michael
- Sound code refactoring: core api is now virtualized,
  MixSDL is divided to generic mixer and driver entities - Mika
- Optimized MixSDL mixing and resampling routines
  (hopefully fixes bug #435) - Mika