@@ -68,7 +68,7 @@ uqm_prepare_config()
 	CHOICE_debug_OPTION_debug_TITLE="Debugging information"
 	CHOICE_debug_OPTION_debug_ACTION='debug_action'
 	debug_action() {
-		CFLAGS="$CFLAGS -g -O0 -W -Wall"
+		CFLAGS="$CFLAGS -g -O0 -W -Wall -DDEBUG"
 		LDFLAGS="$LDFLAGS -O0"
 		DEBUG=1
 	}
