@@ -18,7 +18,7 @@
 
 #include "starcon.h"
 
-/* #define DEBUG */
+//#define DEBUG_COLLIDE
 
 void
 collide (ELEMENTPTR ElementPtr0, ELEMENTPTR ElementPtr1)
@@ -55,13 +55,13 @@ collide (ELEMENTPTR ElementPtr0, ELEMENTPTR ElementPtr1)
 		ImpactAngle1 = TravelAngle1 + HALF_CIRCLE;
 	}
 
-#ifdef DEBUG
+#ifdef DEBUG_COLLIDE
 	fprintf (stderr, "Centers: <%d, %d> <%d, %d>\n",
 			ElementPtr0->next.location.x, ElementPtr0->next.location.y,
 			ElementPtr1->next.location.x, ElementPtr1->next.location.y);
 	fprintf (stderr, "RelTravelAngle : %d, ImpactAngles <%d, %d>\n",
 			RelTravelAngle, ImpactAngle0, ImpactAngle1);
-#endif /* DEBUG */
+#endif /* DEBUG_COLLIDE */
 
 	if (ElementPtr0->next.location.x == ElementPtr0->current.location.x
 			&& ElementPtr0->next.location.y == ElementPtr0->current.location.y
@@ -77,10 +77,10 @@ collide (ELEMENTPTR ElementPtr0, ELEMENTPTR ElementPtr1)
 		}
 		ElementPtr0->state_flags |= (DEFY_PHYSICS | COLLISION);
 		ElementPtr1->state_flags |= (DEFY_PHYSICS | COLLISION);
-#ifdef DEBUG
+#ifdef DEBUG_COLLIDE
 		fprintf (stderr, "No movement before collision -- <(%d, %d) = %d, (%d, %d) = %d>\n",
 				dx0, dy0, ImpactAngle0 - OCTANT, dx1, dy1, ImpactAngle1 - OCTANT);
-#endif /* DEBUG */
+#endif /* DEBUG_COLLIDE */
 	}
 
 	{
@@ -164,12 +164,12 @@ collide (ELEMENTPTR ElementPtr0, ELEMENTPTR ElementPtr1)
 						SINE (ImpactAngle1,
 						WORLD_TO_VELOCITY (SCALED_ONE) - 1));
 		}
-#ifdef DEBUG
+#ifdef DEBUG_COLLIDE
 		GetCurrentVelocityComponents (&ElementPtr0->velocity, &dx0, &dy0);
 		GetCurrentVelocityComponents (&ElementPtr1->velocity, &dx1, &dy1);
 		fprintf (stderr, "After: <%d, %d> <%d, %d>\n\n",
 				dx0, dy0, dx1, dy1);
-#endif /* DEBUG */
+#endif /* DEBUG_COLLIDE */
 	}
 }
 
