@@ -23,7 +23,7 @@
 #define THREADLIB SDL
 
 #define NAMED_SYNCHRO           /* Should synchronizable objects have names? */
-// #define TRACK_CONTENTION       /* Should we report when a thread sleeps on synchronize? */
+#define TRACK_CONTENTION       /* Should we report when a thread sleeps on synchronize? */
 
 /* TRACK_CONTENTION implies NAMED_SYNCHRO. */
 #ifdef TRACK_CONTENTION
@@ -39,9 +39,9 @@
 #endif  /* DEBUG */
 
 #ifdef DEBUG_THREADS
-#	ifndef PROFILE_THREADS
-#		define PROFILE_THREADS
-#	endif
+//#	ifndef PROFILE_THREADS
+//#		define PROFILE_THREADS
+//#	endif
 #endif  /* DEBUG_THREADS */
 
 #include <sys/types.h>
